docs/0.8/_sources/api/gammapy.maps.WcsGeom.rst.txt
WcsGeom
=======

.. currentmodule:: gammapy.maps

.. autoclass:: WcsGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~WcsGeom.axes
      ~WcsGeom.center_coord
      ~WcsGeom.center_pix
      ~WcsGeom.center_skydir
      ~WcsGeom.conv
      ~WcsGeom.coordsys
      ~WcsGeom.data_shape
      ~WcsGeom.is_allsky
      ~WcsGeom.is_hpx
      ~WcsGeom.is_image
      ~WcsGeom.is_regular
      ~WcsGeom.ndim
      ~WcsGeom.npix
      ~WcsGeom.pixel_area
      ~WcsGeom.pixel_scales
      ~WcsGeom.projection
      ~WcsGeom.shape
      ~WcsGeom.wcs
      ~WcsGeom.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~WcsGeom.contains
      ~WcsGeom.contains_pix
      ~WcsGeom.coord_to_idx
      ~WcsGeom.coord_to_pix
      ~WcsGeom.coord_to_tuple
      ~WcsGeom.copy
      ~WcsGeom.create
      ~WcsGeom.crop
      ~WcsGeom.downsample
      ~WcsGeom.from_hdulist
      ~WcsGeom.from_header
      ~WcsGeom.get_axis_by_name
      ~WcsGeom.get_coord
      ~WcsGeom.get_idx
      ~WcsGeom.get_image_shape
      ~WcsGeom.get_pix
      ~WcsGeom.make_bands_hdu
      ~WcsGeom.make_header
      ~WcsGeom.pad
      ~WcsGeom.pix_to_coord
      ~WcsGeom.pix_to_idx
      ~WcsGeom.region_mask
      ~WcsGeom.separation
      ~WcsGeom.slice_by_idx
      ~WcsGeom.solid_angle
      ~WcsGeom.to_cube
      ~WcsGeom.to_image
      ~WcsGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: conv
   .. autoattribute:: coordsys
   .. autoattribute:: data_shape
   .. autoattribute:: is_allsky
   .. autoattribute:: is_hpx
   .. autoattribute:: is_image
   .. autoattribute:: is_regular
   .. autoattribute:: ndim
   .. autoattribute:: npix
   .. autoattribute:: pixel_area
   .. autoattribute:: pixel_scales
   .. autoattribute:: projection
   .. autoattribute:: shape
   .. autoattribute:: wcs
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: coord_to_tuple
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: from_hdulist
   .. automethod:: from_header
   .. automethod:: get_axis_by_name
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: get_image_shape
   .. automethod:: get_pix
   .. automethod:: make_bands_hdu
   .. automethod:: make_header
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: region_mask
   .. automethod:: separation
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: upsample
